--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if session %}
-                <li><a class="pad-17"\>Logout</a></li>
+                <li><a class="pad-17" href="/accounts/signout/"\>Sign out</a></li>
                 {% else %}
                 <li><a href="#LoginModal" class="pad-17" data-toggle="modal" data-target="#LoginModal">Login</a></li>
                 {% endif %}
@@ -118,7 +118,7 @@
                             <b>http://</b> 를 붙여서 입력해 주세요.
                             <br /> ex) http://www.slideshare.net/stevescottsite/3-easy-steps-to-digitize-your-study-notes
                         </p-->
-                        <form class="input-group input-group-lg col-md-6 col-md-offset-3" action="/" method="POST">
+                        <form class="input-group input-group-lg col-md-6 col-md-offset-3" id="url_form" action="/" method="POST">
                             <input id="sinpt" autofocus="" name='url' placeholder="http://www.slideshare.net/stevescottsite/3-easy-steps-to-digitize-your-study-notes" type="text" class="form-control">
                             <span class="input-group-btn">
                             <button id="sbtn" class="btn btn-primary" type="submit">
