Make task queue state page. close #10
Issue: need to get title and description.

--- a/project/templates/state.html
+++ b/project/templates/state.html
@@ -5,14 +5,7 @@
     <title>::Task Queue::</title>
     <link rel="stylesheet" href="/static/bootstrap/bootstrap.css" type="text/css">
     <script type="text/javascript" src="/static/js/jquery-1.8.2.min.js"></script>
-    <script>
-        var socket = io.connect('http://' + document.domain + ':' + "5000");
-        // event handler for server sent data
-        // the data is displayed in the "Received" section of the page
-        socket.on('state', function(msg) {
-            console.log(msg)
-        });
-    </script>
+
     <style>
         .progress {
             margin-left: 15px;
@@ -23,20 +16,7 @@
 <body>
 <div class="row col-md-3">
     <div class="panel panel-default">
-        <div class="panel-thumbnail"><img src="/static/img/hacking.jpg" class="img-responsive"></div>
-        <div class="panel-body">
-            <p class="lead">해킹대회 리뷰 및 실전 해킹</p>
-            <p>토토등 2015 - 해킹 대회 리뷰 및 실전 해킹 - 임정원</p>
-        </div>
-        <div class="progress" style="margin-left:0px; margin-right:0px">
-            <div class="progress-bar progress-bar-success" role="progressbar" data-transitiongoal="57"></div>
-        </div>
-    </div>
-</div>
-
-<div class="row col-md-3">
-    <div class="panel panel-default">
-        <div class="panel-thumbnail"><img src="/static/img/hacking.jpg" class="img-responsive"></div>
+        <div class="panel-thumbnail"><img src="/static/img/hacking.jpg" class="img-responsive slide-thumbnail"></div>
         <div class="panel-body">
             <p class="lead">해킹대회 리뷰 및 실전 해킹</p>
             <p>토토등 2015 - 해킹 대회 리뷰 및 실전 해킹 - 임정원</p>
@@ -47,64 +27,68 @@
     </div>
 </div>
 
-<div class="row col-md-3">
-    <div class="panel panel-default">
-        <div class="panel-thumbnail"><img src="/static/img/hacking.jpg" class="img-responsive"></div>
-        <div class="panel-body">
-            <p class="lead">해킹대회 리뷰 및 실전 해킹</p>
-            <p>토토등 2015 - 해킹 대회 리뷰 및 실전 해킹 - 임정원</p>
-        </div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="47"></div>
-        </div>
-    </div>
-</div>
-
-<div class="row col-md-3">
-    <div class="panel panel-default">
-        <div class="panel-thumbnail"><img src="/static/img/hacking.jpg" class="img-responsive"></div>
-        <div class="panel-body">
-            <p class="lead">해킹대회 리뷰 및 실전 해킹</p>
-            <p>토토등 2015 - 해킹 대회 리뷰 및 실전 해킹 - 임정원</p>
-        </div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="80"></div>
-        </div>
-    </div>
-</div>
-
-
-<span id="update"></span>
-<span id="done"></span>
-
 </body>
 <script type="text/javascript" src="/static/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript"
-        src="//www.minddust.com/bootstrap-progressbar/demo/js/bootstrap-progressbar.js"></script>
+<script type="text/javascript" src="/static/js/bootstrap-progressbar.min.js"></script>
 <script type="text/javascript">
-    function updateProgress(percentage) {
+    function updateProgress(task_id, percentage, pdf_url) {
+        //console.log(task_id, percentage);
         if (percentage > 100) percentage = 100;
-        $('.progress-bar').css('width', percentage + '%');
-        $('.progress-bar').html(percentage + '%');
+        $('#'+task_id+' .progress-bar').css('width', percentage + '%');
+        $('#'+task_id+' .progress-bar').html(percentage + '%');
+        if(percentage == 100)
+        {
+            var p =$('#'+task_id+' .panel-thumbnail').html();
+            $('#'+task_id+' .panel-thumbnail').html('<a href="'+pdf_url+'">'+ p+'</a>');
+        }
     }
 
     $(document).ready(function () {
         $('.progress .progress-bar').progressbar({
             display_text: 'fill',
             update: function (current_percentage) {
-                $('#update').html(current_percentage);
+                return;
             },
             done: function () {
-                $('#done').html('yeah! done!');
+                return;
             }
         });
+
+        function createCard(id, percent, thumbnail) {
+            var card = '<div class="row col-md-3" id="' + id + '">'
+                    + '<div class="panel panel-default">'
+                    + '<div class="panel-thumbnail"><img src="' + thumbnail + '" class="img-responsive slide-thumbnail"></div>'
+                    + '<div class="panel-body">'
+                    + '<p class="lead">해킹대회 리뷰 및 실전 해킹</p>'
+                    + '<p>토토등 2015 - 해킹 대회 리뷰 및 실전 해킹 - 임정원</p>'
+                    + '</div>'
+                    + '<div class="progress">'
+                    + '<div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="' + percent + '"></div>';
+            +'</div> </div> </div>';
+            var node = $.parseHTML(card);
+            $('body').append(node);
+            return true;
+        }
+
         $('.progress-bar').html('0%');
         var i = 1;
         setInterval(function () {
-            updateProgress(i);
+            $.getJSON('http://' + document.domain + ":5000/api/state/", function (data) {
+                $.each(data.states, function (i) {
+                    if(data.states[i]['state'] == 'PENDING')
+                        return;
+                    var pdf_url = data.states[i]['result'];
+                    var percent = parseInt(data.states[i]['current'] / data.states[i]['total'] * 100);
+                    var thumbnail = data.states[i]['thumbnail'];
+                    var task_id = data.states[i]['task_id'];
+                    //console.log(pdf_url, percent, thumbnail, task_id);
+                    if($('#'+task_id).length == 0)
+                        createCard(task_id, percent, thumbnail);
+                    updateProgress(task_id, percent, pdf_url);
+                });
+            });
             i += 10;
         }, 2000);
-
     });
 </script>
 </html>
