--- a/project/templates/state.html
+++ b/project/templates/state.html
@@ -14,18 +14,7 @@
     </style>
 </head>
 <body>
-<div class="row col-md-3">
-    <div class="panel panel-default">
-        <div class="panel-thumbnail"><img src="/static/img/hacking.jpg" class="img-responsive slide-thumbnail"></div>
-        <div class="panel-body">
-            <p class="lead">해킹대회 리뷰 및 실전 해킹</p>
-            <p>토토등 2015 - 해킹 대회 리뷰 및 실전 해킹 - 임정원</p>
-        </div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="10"></div>
-        </div>
-    </div>
-</div>
+<img src="/static/img/loading.gif" id="loading" />
 
 </body>
 <script type="text/javascript" src="/static/bootstrap/bootstrap.min.js"></script>
@@ -39,7 +28,8 @@
         if(percentage == 100)
         {
             var p =$('#'+task_id+' .panel-thumbnail').html();
-            $('#'+task_id+' .panel-thumbnail').html('<a href="'+pdf_url+'">'+ p+'</a>');
+            if($('#'+task_id+' .panel-thumbnail a').length  < 1)
+                $('#'+task_id+' .panel-thumbnail').html('<a target="_blank" href="'+pdf_url+'">'+ p+'</a>');
         }
     }
 
@@ -54,13 +44,13 @@
             }
         });
 
-        function createCard(id, percent, thumbnail) {
+        function createCard(id, title, author, percent, thumbnail) {
             var card = '<div class="row col-md-3" id="' + id + '">'
                     + '<div class="panel panel-default">'
                     + '<div class="panel-thumbnail"><img src="' + thumbnail + '" class="img-responsive slide-thumbnail"></div>'
                     + '<div class="panel-body">'
-                    + '<p class="lead">해킹대회 리뷰 및 실전 해킹</p>'
-                    + '<p>토토등 2015 - 해킹 대회 리뷰 및 실전 해킹 - 임정원</p>'
+                    + '<p class="lead">'+title+'</p>'
+                    + '<p>'+author+'</p>'
                     + '</div>'
                     + '<div class="progress">'
                     + '<div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="' + percent + '"></div>';
@@ -71,23 +61,26 @@
         }
 
         $('.progress-bar').html('0%');
-        var i = 1;
         setInterval(function () {
             $.getJSON('http://' + document.domain + ":5000/api/state/", function (data) {
                 $.each(data.states, function (i) {
-                    if(data.states[i]['state'] == 'PENDING')
+                    if(data.states[i]['state'] == 'PENDING' || data.states[i]['state'] == 'FAILURE')
                         return;
-                    var pdf_url = data.states[i]['result'];
+                    $("#loading").remove();
+                    console.log(data.states[i]['state']);
+                    var title = data.states[i]['title'];
+                    var description = data.states[i]['description'];
+                    var author = data.states[i]['author'];
+                    var pdf_url = data.states[i]['pdf_url'];
                     var percent = parseInt(data.states[i]['current'] / data.states[i]['total'] * 100);
                     var thumbnail = data.states[i]['thumbnail'];
                     var task_id = data.states[i]['task_id'];
                     //console.log(pdf_url, percent, thumbnail, task_id);
                     if($('#'+task_id).length == 0)
-                        createCard(task_id, percent, thumbnail);
+                        createCard(task_id,title, author, percent, thumbnail);
                     updateProgress(task_id, percent, pdf_url);
                 });
             });
-            i += 10;
         }, 2000);
     });
 </script>
