Expose how many people and slides in this service on index close #22

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -131,7 +131,7 @@
                     <div class="row">
                         <br />
                         <br />
-                        <h2 class="text-center hh1 col-md-10 col-md-offset-1">6명의 사람들이 사용중이고, 20개의 슬라이드가 이 사이트를 통해 전달되었습니다. </h2>
+                        <h2 class="text-center hh1 col-md-10 col-md-offset-1">{{ current_users }}명의 사람들이 사용중이고, {{ current_slides }}개의 슬라이드가 이 사이트를 통해 전달되었습니다. </h2>
                     </div>
                     <br>
                     <br>
